[package]
name = "TOML2JSON_dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "TOML2JSON"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"
serde = "1.0.193"
serde_json = "1.0.108"
toml = "0.8.8"
